UtahLiveDataTest/src/objects/StrategicPlan__c.object
<CustomObject>
    <description>[Business] Defines the Strategic plan for an Organization which owns the Application</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Plans</relationshipLabel>
        <relationshipName>Strategic_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Strategic Plans</relationshipLabel>
        <relationshipName>Strategic_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideActivateStrategicPlanbutton__c</fullName>
        <formula>ISPICKVAL( Status__c , &apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideActivateStrategicPlanbutton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PlannedAmount__c</fullName>
        <label>Planned Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrategyDescription__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StrategyOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StrategyTitle__c</fullName>
        <label>Strategy Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActiive__c</fullName>
        <formula>IF((TEXT(Status__c) == &apos;Active&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Actiive</label>
        <type>Checkbox</type>
    </fields>
    <label>Strategic Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>StrategyDescription__c</columns>
        <columns>FiscalYear__c</columns>
        <columns>InternalUniqueID__c</columns>
        <columns>isActiive__c</columns>
        <columns>PlannedAmount__c</columns>
        <columns>Status__c</columns>
        <columns>StrategyTitle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPN-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
</CustomObject>